tests/transpiler/x/fs/in_operator_extended.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/in_operator_extended.fs(11,32): error FS0001: The type 'Anon1' is not compatible with the type 'seq<string>'

/workspace/mochi/tests/transpiler/x/fs/in_operator_extended.fs(12,32): error FS0001: The type 'Anon1' is not compatible with the type 'seq<string>'
